--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,62 @@ aiofiles==23.2.1
 aiogram==3.2.0
 aiohttp==3.9.3
 aiosignal==1.3.1
+alembic==1.13.1
 annotated-types==0.6.0
+anyio==4.3.0
 async-timeout==4.0.3
+asyncpg==0.29.0
 attrs==23.2.0
+bcrypt==4.1.2
 certifi==2024.2.2
+cffi==1.16.0
+click==8.1.7
+cryptography==42.0.3
+dnspython==2.6.1
+email-validator==2.1.0.post1
+exceptiongroup==1.2.0
+fastapi==0.109.2
+fastapi-cache2==0.2.1
+fastapi-users==12.1.3
+fastapi-users-db-sqlalchemy==6.0.1
 frozenlist==1.4.1
+greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.3
+httptools==0.6.1
+httpx==0.26.0
 idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
 magic-filter==1.0.12
+makefun==1.15.2
+Mako==1.3.2
+MarkupSafe==2.1.5
 multidict==6.0.5
+orjson==3.9.14
+passlib==1.7.4
+pendulum==3.0.0
+pycparser==2.21
 pydantic==2.5.3
+pydantic-extra-types==2.5.0
+pydantic-settings==2.2.1
 pydantic_core==2.14.6
+PyJWT==2.8.0
+python-dateutil==2.8.2
 python-dotenv==1.0.1
+python-multipart==0.0.7
+PyYAML==6.0.1
+redis==4.6.0
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==2.0.27
+starlette==0.36.3
+time-machine==2.13.0
 typing_extensions==4.9.0
+tzdata==2024.1
+ujson==5.9.0
+uvicorn==0.27.1
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==12.0
 yarl==1.9.4
