--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,111 @@
-aiofiles==23.2.1
+aiofiles==22.1.0
 aiogram==3.2.0
 aiohttp==3.9.3
+aioredis==2.0.1
 aiosignal==1.3.1
-alembic==1.13.1
+aiosqlite==0.17.0
+alembic==1.9.2
+amqp==5.1.1
 annotated-types==0.6.0
-anyio==4.3.0
-async-timeout==4.0.3
-asyncpg==0.29.0
-attrs==23.2.0
-bcrypt==4.1.2
-certifi==2024.2.2
-cffi==1.16.0
-click==8.1.7
-cryptography==42.0.3
-dnspython==2.6.1
-email-validator==2.1.0.post1
-exceptiongroup==1.2.0
-fastapi==0.109.2
-fastapi-cache2==0.2.1
-fastapi-users==12.1.3
-fastapi-users-db-sqlalchemy==6.0.1
+anyio==3.6.2
+async-generator==1.10
+async-timeout==4.0.2
+asyncpg==0.27.0
+attrs==22.2.0
+autoflake==2.0.0
+Babel==2.11.0
+bcrypt==4.0.1
+billiard==3.6.4.0
+celery==5.2.7
+certifi==2022.12.7
+cffi==1.15.1
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+cryptography==39.0.0
+dnspython==2.3.0
+email-validator==1.3.0
+exceptiongroup==1.1.0
+fastapi==0.89.1
+fastapi-admin==1.0.4
+fastapi-cache2==0.2.0
+fastapi-users==10.3.0
+fastapi-users-db-sqlalchemy==4.0.4
+fastapi_amis_admin==0.4.2
+fastapi_user_auth==0.4.2
+flower==2.0.1
 frozenlist==1.4.1
-greenlet==3.0.3
+greenlet==2.0.1
+gunicorn==21.2.0
 h11==0.14.0
-httpcore==1.0.3
-httptools==0.6.1
-httpx==0.26.0
-idna==3.6
+httpcore==0.16.3
+httptools==0.5.0
+httpx==0.23.3
+humanize==4.9.0
+idna==3.4
+importlib-metadata==6.0.0
+importlib-resources==5.10.2
+iniconfig==2.0.0
+iso8601==1.1.0
 itsdangerous==2.1.2
-Jinja2==3.1.3
+Jinja2==3.1.2
+kombu==5.2.4
 magic-filter==1.0.12
-makefun==1.15.2
-Mako==1.3.2
-MarkupSafe==2.1.5
+makefun==1.15.0
+Mako==1.2.4
+MarkupSafe==2.1.2
 multidict==6.0.5
-orjson==3.9.14
+orjson==3.8.5
+outcome==1.2.0
+packaging==23.0
 passlib==1.7.4
-pendulum==3.0.0
-psycopg2==2.9.9
-psycopg2-binary==2.9.9
+pendulum==2.1.2
+pluggy==1.0.0
+prometheus_client==0.20.0
+prompt-toolkit==3.0.36
+psycopg2-binary==2.9.5
 pycparser==2.21
-pydantic==2.5.3
+pydantic==1.10.4
 pydantic-extra-types==2.5.0
 pydantic-settings==2.2.1
 pydantic_core==2.14.6
-PyJWT==2.8.0
+pyflakes==3.0.1
+PyJWT==2.6.0
+pypika-tortoise==0.1.6
+pytest==7.2.1
+pytest-asyncio==0.20.3
 python-dateutil==2.8.2
-python-dotenv==1.0.1
-python-multipart==0.0.7
-PyYAML==6.0.1
-redis==4.6.0
+python-dotenv==0.21.0
+python-multipart==0.0.5
+pytz==2022.7.1
+pytzdata==2020.1
+PyYAML==6.0
+redis==4.4.2
+rfc3986==1.5.0
 six==1.16.0
 sniffio==1.3.0
-SQLAlchemy==2.0.27
-starlette==0.36.3
+sortedcontainers==2.4.0
+sqladmin==0.8.0
+SQLAlchemy==1.4.41
+sqlalchemy2-stubs==0.0.2a32
+sqlalchemy_database==0.1.0
+sqlmodel==0.0.8
+sqlmodelx==0.0.4
+starlette==0.22.0
 time-machine==2.13.0
-typing_extensions==4.9.0
+tomli==2.0.1
+tornado==6.4
+tortoise-orm==0.19.2
+typing_extensions==4.4.0
 tzdata==2024.1
-ujson==5.9.0
-uvicorn==0.27.1
-uvloop==0.19.0
-watchfiles==0.21.0
-websockets==12.0
+ujson==5.7.0
+uvicorn==0.20.0
+uvloop==0.17.0
+vine==5.0.0
+watchfiles==0.18.1
+wcwidth==0.2.6
+websockets==10.4
+WTForms==3.0.1
 yarl==1.9.4
+zipp==3.11.0
