--- a/requirements.txt
+++ b/requirements.txt
@@ -23,11 +23,11 @@ click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
-cryptography==39.0.0
+cryptography==42.0.5
 dnspython==2.3.0
 email-validator==1.3.0
 exceptiongroup==1.1.0
-fastapi==0.89.1
+fastapi==0.110.0
 fastapi-admin==1.0.4
 fastapi-cache2==0.2.0
 fastapi-users==10.3.0
@@ -49,14 +49,14 @@ importlib-resources==5.10.2
 iniconfig==2.0.0
 iso8601==1.1.0
 itsdangerous==2.1.2
-Jinja2==3.1.2
+Jinja2==3.1.3
 kombu==5.2.4
 magic-filter==1.0.12
 makefun==1.15.0
 Mako==1.2.4
 MarkupSafe==2.1.2
 multidict==6.0.5
-orjson==3.8.5
+orjson==3.9.15
 outcome==1.2.0
 packaging==23.0
 passlib==1.7.4
@@ -77,11 +77,11 @@ pytest==7.2.1
 pytest-asyncio==0.20.3
 python-dateutil==2.8.2
 python-dotenv==1.0.1
-python-multipart==0.0.5
+python-multipart==0.0.9
 pytz==2022.7.1
 pytzdata==2020.1
 PyYAML==6.0
-redis==4.4.2
+redis==5.1.0b3
 rfc3986==1.5.0
 six==1.16.0
 sniffio==1.3.0
@@ -92,15 +92,15 @@ sqlalchemy2-stubs==0.0.2a32
 sqlalchemy_database==0.1.0
 sqlmodel==0.0.8
 sqlmodelx==0.0.4
-starlette==0.22.0
+starlette==0.37.1
 time-machine==2.13.0
 tomli==2.0.1
 tornado==6.4
-tortoise-orm==0.19.2
+tortoise-orm==0.20.0
 typing_extensions==4.9.0
 tzdata==2024.1
 ujson==5.7.0
-uvicorn==0.20.0
+uvicorn==0.25.0
 uvloop==0.17.0
 vine==5.0.0
 watchfiles==0.18.1
