--- a/requirements.txt
+++ b/requirements.txt
@@ -14,13 +14,13 @@ asyncpg==0.29.0
 attrs==23.2.0
 autoflake==2.3.0
 Babel==2.14.0
-bcrypt==4.1.2
+bcrypt==4.0.1
 billiard==4.2.0
 casbin==1.36.0
 celery==5.4.0rc1
 certifi==2024.2.2
 cffi==1.16.0
-chardet==5.2.0
+chardet==3.0.4
 charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.0
@@ -41,16 +41,16 @@ flower==2.0.1
 frozenlist==1.4.1
 greenlet==3.0.3
 gunicorn==21.2.0
-h11==0.14.0
-httpcore==1.0.4
+h11==0.9.0
+httpcore==0.9.1
 httptools==0.6.1
-httpx==1.0.0b0
+httpx==0.13.3
 humanize==4.9.0
-idna==3.6
+idna==2.10
 importlib-metadata==7.0.1
 importlib_resources==6.1.2
 iniconfig==2.0.0
-iso8601==2.1.0
+iso8601==1.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 kombu==5.3.5
@@ -80,12 +80,12 @@ pytest==8.0.2
 pytest-asyncio==0.23.5
 python-dateutil==2.8.2
 python-dotenv==1.0.1
-python-multipart==0.0.9
+python-multipart==0.0.7
 pytz==2024.1
 pytzdata==2020.1
 PyYAML==6.0.1
 redis==5.1.0b3
-rfc3986==2.0.0
+rfc3986==1.5.0
 simpleeval==0.9.13
 six==1.16.0
 sniffio==1.3.1
@@ -96,7 +96,7 @@ sqlalchemy2-stubs==0.0.2a38
 sqlalchemy_database==0.1.1
 sqlmodel==0.0.16
 sqlmodelx==0.0.12a1
-starlette==0.37.1
+starlette==0.36.3
 time-machine==2.13.0
 tomli==2.0.1
 tornado==6.4
