--- a/questionnaire_bot/requirements.txt
+++ b/questionnaire_bot/requirements.txt
@@ -13,10 +13,16 @@ greenlet==3.0.3
 idna==3.6
 magic-filter==1.0.12
 multidict==6.0.5
+numpy==1.26.4
+pandas==2.2.2
 psycopg2-binary==2.9.9
 pydantic==2.5.3
 pydantic_core==2.14.6
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.1
+six==1.16.0
 SQLAlchemy==2.0.27
 typing_extensions==4.11.0
+tzdata==2024.1
 yarl==1.9.4
