--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ gunicorn==21.2.0
 h11==0.14.0
 httpcore==1.0.4
 httptools==0.6.1
-httpx==1.0.0b0
+httpx==0.23.0
 humanize==4.9.0
 idna==3.6
 importlib-metadata==7.0.1
