--- a/requirements.txt
+++ b/requirements.txt
@@ -1,115 +1,70 @@
 aiofiles==23.2.1
 aiogram==3.2.0
 aiohttp==3.9.3
-aioredis==2.0.1
 aiosignal==1.3.1
-aiosqlite==0.17.0
 alembic==1.13.1
-amqp==5.2.0
 annotated-types==0.6.0
 anyio==4.3.0
-async-generator==1.10
 async-timeout==4.0.3
 asyncpg==0.29.0
 attrs==23.2.0
-autoflake==2.3.0
-Babel==2.14.0
-bcrypt==4.0.1
-billiard==4.2.0
-casbin==1.36.0
-celery==5.4.0rc1
+bcrypt==4.1.2
 certifi==2024.2.2
 cffi==1.16.0
-chardet==3.0.4
-charset-normalizer==3.3.2
 click==8.1.7
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-cryptography==42.0.5
+cryptography==42.0.3
 dnspython==2.6.1
-email_validator==2.1.1
+email-validator==2.1.0.post1
+et-xmlfile==1.1.0
 exceptiongroup==1.2.0
-fastapi==0.110.0
-fastapi-admin==1.0.4
+fastapi==0.109.2
 fastapi-cache2==0.2.1
 fastapi-users==12.1.3
 fastapi-users-db-sqlalchemy==6.0.1
-fastapi_amis_admin==0.7.2a2
-fastapi_user_auth==0.7.2
-flower==2.0.1
 frozenlist==1.4.1
 greenlet==3.0.3
-gunicorn==21.2.0
-h11==0.9.0
-httpcore==0.9.1
+h11==0.14.0
+httpcore==1.0.3
 httptools==0.6.1
-httpx==0.13.3
-humanize==4.9.0
-idna==2.10
-importlib-metadata==7.0.1
-importlib_resources==6.1.2
-iniconfig==2.0.0
-iso8601==1.1.0
+httpx==0.26.0
+idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
-kombu==5.3.5
 magic-filter==1.0.12
 makefun==1.15.2
 Mako==1.3.2
 MarkupSafe==2.1.5
 multidict==6.0.5
-orjson==3.9.15
-outcome==1.3.0.post0
-packaging==23.2
+numpy==1.26.4
+openpyxl==3.1.2
+orjson==3.9.14
+pandas==2.2.2
 passlib==1.7.4
 pendulum==3.0.0
-pluggy==1.4.0
-prometheus_client==0.20.0
-prompt-toolkit==3.0.43
+psycopg2==2.9.9
 psycopg2-binary==2.9.9
 pycparser==2.21
 pydantic==2.5.3
 pydantic-extra-types==2.5.0
 pydantic-settings==2.2.1
 pydantic_core==2.14.6
-pyflakes==3.2.0
 PyJWT==2.8.0
-pypika-tortoise==0.1.6
-pytest==8.0.2
-pytest-asyncio==0.23.5
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-multipart==0.0.7
 pytz==2024.1
-pytzdata==2020.1
 PyYAML==6.0.1
-redis==5.1.0b3
-rfc3986==1.5.0
-simpleeval==0.9.13
+redis==4.6.0
 six==1.16.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-sqladmin==0.16.1
+sniffio==1.3.0
 SQLAlchemy==2.0.27
-sqlalchemy2-stubs==0.0.2a38
-sqlalchemy_database==0.1.1
-sqlmodel==0.0.16
-sqlmodelx==0.0.12a1
 starlette==0.36.3
 time-machine==2.13.0
-tomli==2.0.1
-tornado==6.4
-tortoise-orm==0.20.0
-typing_extensions==4.10.0
+typing_extensions==4.9.0
 tzdata==2024.1
 ujson==5.9.0
 uvicorn==0.27.1
 uvloop==0.19.0
-vine==5.1.0
 watchfiles==0.21.0
-wcwidth==0.2.13
 websockets==12.0
-WTForms==3.1.2
 yarl==1.9.4
-zipp==3.17.0
