--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 /questionnaire_bot/requirements.txt
+
+alembic.ini
+migrations/env.py
+migrations/script.py.mako
