--- a/.env-template
+++ b/.env-template
@@ -4,7 +4,20 @@ DB_NAME=''
 DB_USER=''
 DB_PASS=''
 
-SECRET_AUTH=
+URL=
+SECRET_AUTH=None
+
 
 #for tg bot
-TOKEN_API=''
+TOKEN_API=
+
+
+#for tg bot (random coffee)
+TOKEN_API_RC=
+
+DB_HOST_RC=
+DB_PORT_RC=
+DB_NAME_RC=
+DB_USER_RC=
+DB_PASS_RC=
+
